# cheap-flights-finder

./: README.md  pyproject.toml
src/: data_manager.py  flight_data.py  flight_search.py  notification_manager.py
