[tool.poetry]
name = "cheap-flights-finder"
version = "0.1.0"
description = "The cheap flights finder for travelling"
authors = ["Alexey Danilov <a7exdanilov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[tool.ruff]
line-length = 79
show-source = true
update-check = true

[tool.ruff.isort]
known-first-party = ["src", "tests"]

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
